# drift

./: .gitignore  CMakeLists.txt  README.md
docs/: DESIGN.md  SCENE_FORMAT.md
examples/bokeh.sceneproject/: scene.json
examples/bokeh.sceneproject/shaders/: dusk.wgsl
examples/buoy.sceneproject/: scene.json
examples/cinders.sceneproject/: scene.json
examples/comets.sceneproject/: scene.json
examples/comets.sceneproject/shaders/: dusk.wgsl
examples/effects.sceneproject/: scene.json
examples/embers.sceneproject/: scene.json
examples/fireflies.sceneproject/: scene.json
examples/fireflies.sceneproject/shaders/: halo.wgsl
examples/fireworks.sceneproject/: scene.json
examples/fireworks.sceneproject/shaders/: ground.wgsl  night.wgsl  twinkle.wgsl
examples/fit.sceneproject/: scene.json
examples/fit.sceneproject/shaders/: backdrop.wgsl
examples/follow.sceneproject/: scene.json
examples/handoff.sceneproject/: scene.json
examples/haze.sceneproject/: scene.json
examples/nebula.sceneproject/: scene.json
examples/nebula.sceneproject/shaders/: glow.wgsl
examples/plasma.sceneproject/: scene.json
examples/plasma.sceneproject/shaders/: plasma.wgsl
examples/plume.sceneproject/: scene.json
examples/plume.sceneproject/shaders/: puff.wgsl
examples/pulse.sceneproject/: scene.json
examples/pulse.sceneproject/shaders/: pulse.wgsl
examples/sparks.sceneproject/: scene.json
examples/sparks.sceneproject/shaders/: night.wgsl
examples/spring.sceneproject/: scene.json
examples/spring.sceneproject/shaders/: bg.wgsl  dot.wgsl
examples/swarm.sceneproject/: scene.json
examples/swarm.sceneproject/shaders/: paint.wgsl  sim.wgsl
examples/sway.sceneproject/: scene.json
examples/trail.sceneproject/: scene.json
examples/trail.sceneproject/shaders/: dot.wgsl  trail.wgsl
examples/wisps.sceneproject/: scene.json
src/: main.cpp
src/core/: Json.h  Module.cpp  Module.h  Mp4Demux.cpp  Mp4Demux.h  NodeProps.h  Nodes.cpp  Nodes.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneLoader.cpp  Value.h  Video.h  WgslInterface.cpp  WgslInterface.h
src/platform/: ControlServer.cpp  ControlServer.h  ModuleNetCurl.cpp  ModuleNetCurl.h  ModuleStorageFiles.h  ModuleWasmtime.cpp  ModuleWasmtime.h  PackageStore.h  ParamJson.h  ProjectGrants.h  VideoDecoderFFmpeg.cpp  VideoDecoderFFmpeg.h
src/platform/linux/: ControlServer.cpp  ControlServer.h  Gpu.cpp  Gpu.h  VideoDecoderFFmpeg.cpp  WaylandApp.cpp  WaylandApp.h  WsCodec.cpp  WsCodec.h
src/platform/mac/: CocoaApp.h  CocoaApp.mm  Gpu.cpp  Gpu.h
src/platform/web/: VideoDecoderWebCodecs.cpp  VideoDecoderWebCodecs.h  editor.html  main.cpp  shell.html
src/platform/web/editor/: config.js  document.js  editor.css  live.js  main.js  nodedefs.js  params.js  preview.js  project.js  templates.js  timeline.js  transport.js  ui.js
src/platform/web/editor/graph/: build.js  canvas.js  draw.js  inspector.js  interact.js  model.js  nodepreview.js  state.js  subgraphs.js  wiring.js
tests/: golden.sh
tests/golden/bokeh/: mouse
tests/golden/comets/: mouse
tests/golden/follow/: mouse  presents
tests/golden/sparks/: mouse
tests/golden/spring/: presents
tests/unit/: module_native_test.cpp  module_net_curl_test.cpp  module_test.cpp  mp4_demux_test.cpp  package_store_test.cpp  scene_loader_test.cpp  sequence_test.cpp  value_nodes_test.cpp  value_precision_test.cpp  wgsl_interface_test.cpp  ws_codec_test.cpp
tests/web/: cdp.mjs  net_test.mjs
tests/web/fixtures/: build.sh  netprobe.wasm  netprobe.wat
tools/: driftctl.mjs  driftpkg.mjs  imgcmp.cpp
